# FastXLSX

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
benchmarks/: CMakeLists.txt  bench_package_editor_cell_replacement.cpp  bench_package_writer.cpp  bench_reference_openxlsx.cpp  bench_reference_xlnt.cpp  bench_streaming_writer.cpp  bench_workbook_editor.cpp  package_writer_direct_deflate.cpp  package_writer_direct_deflate.hpp  reference_benchmark_common.hpp
benchmarks/evidence/: README.md  benchmark-evidence-manifest.schema.json
benchmarks/evidence/2026-07-12-windows-msvc-patch-bounded-direct-range/: manifest.json  matrix-report.json  run-context.json
benchmarks/evidence/2026-07-12-windows-msvc-patch-matrix/: manifest.json  matrix-report.json  run-context.json
benchmarks/evidence/2026-07-12-windows-msvc-streaming-mixed-inline/: manifest.json  result.json  run-context.json  verification.json
benchmarks/evidence/2026-07-12-windows-msvc-streaming-strategy-matrix/: manifest.json  matrix-report.json  run-context.json
benchmarks/evidence/2026-07-13-windows-msvc-openxlsx-reference/: manifest.json  run-context.json  summary.json
benchmarks/evidence/2026-07-13-windows-msvc-patch-event-coalescing-profile/: formula-hyperlink-1m-report.json  manifest.json  mixed-inline-1m-report.json  mixed-shared-1m-report.json  numeric-1m-report.json  numeric-5m-report.json  run-context.json  summary.json
benchmarks/evidence/2026-07-13-windows-msvc-patch-raw-copy-profile/: manifest.json  run-context.json  summary.json
benchmarks/evidence/2026-07-13-windows-msvc-patch-rewrite-batching-profile/: manifest.json  run-context.json  summary.json  upsert-1m-level-1-report.json  upsert-1m-level-6-report.json  upsert-5m-level-1-report.json
benchmarks/evidence/2026-07-13-windows-msvc-patch-single-pass-schema-v5/: manifest.json  run-context.json  summary.json
benchmarks/evidence/2026-07-13-windows-msvc-streaming-compression-profile/: manifest.json  run-context.json  summary.json
benchmarks/evidence/2026-07-13-windows-msvc-streaming-schema-v5/: manifest.json  run-context.json  summary.json
benchmarks/evidence/2026-07-14-windows-msvc-patch-relationship-selective-scan-profile/: formula-hyperlink-1m-report.json  manifest.json  numeric-5m-report.json  run-context.json  summary.json
benchmarks/evidence/2026-07-14-windows-msvc-patch-staged-crc-reuse-profile/: manifest.json  measurements.json  run-context.json  summary.json
benchmarks/evidence/2026-07-15-windows-msvc-patch-canonical-complete-cell-profile/: forward-baseline-v12-formula-hyperlink-matrix.json  forward-baseline-v12-mixed-inline-matrix.json  forward-baseline-v12-numeric-matrix.json  forward-optimized-v13-formula-hyperlink-matrix.json  forward-optimized-v13-mixed-inline-matrix.json  forward-optimized-v13-numeric-matrix.json  summary.json  (+8 more)
examples/: CMakeLists.txt  minimal_writer.cpp  streaming_writer.cpp  workbook_editor_in_memory.cpp
tests/: CMakeLists.txt  image_test_bytes.hpp  test_formula.cpp  test_image.cpp  test_minimal_xlsx.cpp  test_opc.cpp  test_package_editor.cpp  test_package_editor_c5.cpp  test_package_editor_c5_chunked.cpp  test_package_editor_c5_guards.cpp  test_package_editor_c5_large.cpp  test_package_editor_c5_linked.cpp  test_package_editor_cellstore.cpp  test_package_editor_cellstore_catalog.cpp  test_package_editor_cellstore_chunks.cpp  test_package_editor_cellstore_failures.cpp  test_package_editor_cellstore_source.cpp  test_package_editor_core.cpp  test_package_editor_core_calc.cpp  test_package_editor_core_common.hpp  test_package_editor_core_docprops.cpp  test_package_editor_core_linked.cpp  test_package_editor_core_worksheet.cpp  test_package_editor_policy.cpp  test_package_editor_policy_common.hpp  test_package_editor_policy_invalid_inputs.cpp  test_package_editor_policy_save_as_guards.cpp  test_package_editor_preservation.cpp  test_package_editor_preservation_comments.cpp  test_package_editor_preservation_comments_common.hpp  test_package_editor_preservation_comments_ordering.cpp  test_package_editor_preservation_comments_persons.cpp  test_package_editor_preservation_comments_threaded.cpp  test_package_editor_preservation_core.cpp  test_package_editor_preservation_core_docparts.cpp  test_package_editor_preservation_core_docparts_common.hpp  test_package_editor_preservation_core_docparts_drawing.cpp  test_package_editor_preservation_core_docparts_shared.cpp  test_package_editor_preservation_core_docparts_vba.cpp  test_package_editor_preservation_core_drawings.cpp  (+132 more)
tools/: CMakeLists.txt  run_benchmark_matrix.py  run_cpp_reference_writer_benchmarks.py  run_package_writer_benchmark_matrix.py  run_package_writer_paired_benchmark.py  run_patch_benchmark_matrix.py  run_patch_crc_paired_benchmark.py  run_patch_worksheet_scaling_benchmark.py  run_python_writer_benchmarks.py  run_workbook_editor_qa.py  summarize_benchmark_results.py  validate_benchmark_evidence.py  verify_benchmark_matrix_excel.ps1  verify_conditional_formatting_color_scales.py  verify_conditional_formatting_color_scales_excel.ps1  verify_conditional_formatting_data_bars.py  verify_conditional_formatting_data_bars_excel.ps1  verify_conditional_formatting_icon_sets.py  verify_conditional_formatting_icon_sets_excel.ps1  verify_data_validation_prompts.py  verify_data_validation_prompts_excel.ps1  verify_document_properties.py  verify_document_properties_excel.ps1  verify_hyperlinks.py  verify_hyperlinks_excel.ps1  verify_image_metadata.py  verify_image_metadata_excel.ps1  verify_package_editor_cell_replacement_benchmark_excel.ps1  verify_patch_mvp_excel.ps1  verify_phase3_metadata.py  verify_phase3_metadata_excel.ps1  verify_shared_strings_absence.py  verify_shared_strings_absence_excel.ps1  verify_shared_strings_excel.ps1  verify_shared_strings_reference.py  verify_styles_excel.ps1  verify_styles_number_formats.py  verify_table_overlap_excel.ps1  verify_table_overlap_metadata.py  verify_table_totals_excel.ps1  (+5 more)
tools/feature_smoke/: image_disabled_smoke.cpp
(+192 files in other folders)
